@@ -4189,6 +4189,8 @@ v0.33.18        27-Jul-2001
 		Many bugs fixed in the full screen editor.
 		Last line of message is no longer deleted when saving message.
 		Segfault problem with deleting characters fixed.
+		Improved word wrapping. (still needs work)
+		Reduced amount of debug logging messages in editor.
 
 	mbuseradd:
 		Ported to work on FreeBSD.
